RESOLVED FIXED31310
Fix back/forwards cache with JSC isolated worlds.
https://bugs.webkit.org/show_bug.cgi?id=31310
Summary Fix back/forwards cache with JSC isolated worlds.
Gavin Barraclough
Reported 2009-11-10 13:39:57 PST
<rdar://problem/7328111> Cached back navigation doesn't restore global object in extension isolated world
Attachments
The patch (9.02 KB, patch)
2009-11-10 13:54 PST, Gavin Barraclough
ggaren: review+
Gavin Barraclough
Comment 1 2009-11-10 13:54:41 PST
Created attachment 42891 [details] The patch
Geoffrey Garen
Comment 2 2009-11-10 14:18:24 PST
Comment on attachment 42891 [details] The patch r=me I think it would be good to move away from weak pointers to worlds in the future. Objects that point to worlds should just ref them.
Gavin Barraclough
Comment 3 2009-11-10 14:22:20 PST
Sending WebCore/ChangeLog Sending WebCore/bindings/js/JSDOMBinding.cpp Sending WebCore/bindings/js/JSDOMBinding.h Sending WebCore/bindings/js/ScriptCachedFrameData.cpp Sending WebCore/bindings/js/ScriptCachedFrameData.h Sending WebCore/bindings/js/ScriptController.h Transmitting file data ...... Committed revision 50767.
Note You need to log in before you can comment on or make changes to this bug.