WebCore/bindings/js/JSDOMBinding.cpp
@@ -45,6 +45,7 @@
 #include "KURL.h"
 #include "MessagePort.h"
 #include "RangeException.h"
+#include "ScriptCachedFrameData.h"
 #include "ScriptController.h"
 #include "Settings.h"
 #include "XMLHttpRequestException.h"
@@ -168,6 +169,8 @@ DOMWrapperWorld::~DOMWrapperWorld()
     for (HashSet<Document*>::iterator iter = documentsWithWrappers.begin(); iter != documentsWithWrappers.end(); ++iter)
         forgetWorldOfDOMNodesForDocument(*iter, this);
     for (HashSet<ScriptController*>::iterator iter = scriptControllersWithShells.begin(); iter != scriptControllersWithShells.end(); ++iter)
+        (*iter)->forgetWorld(this);
+    for (HashSet<ScriptCachedFrameData*>::iterator iter = backForwardCachesWithShells.begin(); iter != backForwardCachesWithShells.end(); ++iter)
         (*iter)->forgetWorld(this);
 }
 
