WebCore/bindings/js/JSDOMBinding.h
@@ -42,6 +42,7 @@ namespace WebCore {
     class Node;
     class String;
     class ScriptController;
+    class ScriptCachedFrameData;
 
     typedef int ExceptionCode;
 
@@ -149,6 +150,8 @@ namespace WebCore {
         void forgetDocument(Document* document) { documentsWithWrappers.remove(document); }
         void rememberScriptController(ScriptController* scriptController) { scriptControllersWithShells.add(scriptController); }
         void forgetScriptController(ScriptController* scriptController) { scriptControllersWithShells.remove(scriptController); }
+        void rememberScriptCachedFrameData(ScriptCachedFrameData* backForwardCache) { backForwardCachesWithShells.add(backForwardCache); }
+        void forgetScriptCachedFrameData(ScriptCachedFrameData* backForwardCache) { backForwardCachesWithShells.remove(backForwardCache); }
 
         // FIXME: can we make this private?
         DOMObjectWrapperMap m_wrappers;
@@ -157,6 +160,7 @@ namespace WebCore {
         JSC::JSGlobalData* m_globalData;
         HashSet<Document*> documentsWithWrappers;
         HashSet<ScriptController*> scriptControllersWithShells;
+        HashSet<ScriptCachedFrameData*> backForwardCachesWithShells;
     };
 
     // Map from static HashTable instances to per-GlobalData ones.
